# clidex

./: CHANGELOG.md  Cargo.toml  README.md  install.sh  llms.txt
.github/workflows/: build-index.yml  ci.yml  release.yml
docs/: index.html
src/: config.rs  index.rs  lib.rs  main.rs  model.rs  output.rs  search.rs  semantic.rs
tests/: index_coverage_test.rs  search_real_index_test.rs  search_test.rs
