[package]
name = "clidex"
version = "0.2.0"
edition = "2021"
description = "CLI tool discovery for AI agents — search, compare, and install 440+ command-line tools with structured YAML/JSON output"
license = "MIT"
repository = "https://github.com/syshin0116/clidex"
homepage = "https://github.com/syshin0116/clidex"
readme = "README.md"
keywords = ["cli", "search", "ai-agent", "developer-tools", "bm25"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
colored = "2"
bm25 = "1"
dirs = "5"
regex = "1"
nucleo-matcher = "0.3.1"
model2vec-rs = { version = "0.1.4", optional = true }

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = true
strip = true

[features]
default = []
semantic = ["dep:model2vec-rs"]
